[DRM plugin] No forward declare of DrmSurfaceBuffer without GBM

This fixes a compilation error introduced with efedddd905c3e49, which
forward declared the DrmSurfaceBuffer class also on builds without GBM.

BUG: 379732